--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <header>
         <div>
-            <h1>A parenting coach in your pocket.</h1>
+            <h1>A parenting coach in your pocket</h1>
             <img src="./images/device mockup 1.svg" alt="Screenshot of the mobile app" />
             <h2>Most parenting resources are built with moms in mind.</h2>
             <h3>We've created one for you, Dad!</h3>
-            <h4>We want to empower afthers to parent with confidence and enjoy more quality time with their kids.</h4>
+            <h4>We want to empower fathers to parent with confidence and enjoy more quality time with their kids.</h4>
             <a href="#" class="button">Get Dadvice</a>
             <h5>Here you will find:</h5>
         </div>
