Added another button and header

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div>
             <nav>
-            <a href="#" class="button">Get Dadvice</a>
+            <a href="#" class="button">Sign Up</a>
             </nav>
         </div>
 
