Fixed login button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
             
         <div class="content">
-            <div><h><b>Clif-notes</b> top-rated books <i>(because who has the time to read the whole thing?</i></h></div>
+            <div><h><b>Clif-notes</b> top-rated books <i>(because who has the time to read the whole thing?)</i></h></div>
             <div><img src="./images/penguin3.svg" alt="Penguin with glasses reading a book" /></div>
         </div>
         
